--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,27 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>데이터를 li 형태로 표시하기</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <style>
-    /* 헤더의 스타일링 */
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
-      background-color: #333;
-      color: #fff;
-    }
-
-    /* 로그인, 회원가입 버튼 스타일링 */
-    .btn {
-      padding: 5px 10px;
-      background-color: #fff;
-      color: #333;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-  </style>
   <script>
     $(document).ready(function() {
       $.ajax({
@@ -58,7 +39,7 @@
 </head>
 <body>
 <header>
-  <div>사이트명</div>
+  <div><h1><a href="/" style="text-decoration: none; color: inherit;">NBC-CODESOURCECOMMUNITY</a></h1></div>
   <div>
     <a href="signup.html" class="btn">회원가입</a>
     <a href="login.html" class="btn">로그인</a>
